Minor corrections. Algorithms now return lists of string representations of objects

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -27,7 +27,7 @@
     "        \"\"\"\n",
     "        Перегрузка оператора \">\" для сравнения объектов.\n",
     "        Сравнение идёт сначала по имени жениха, затем по дате свадьбы, затем по номеру ЗАГСа.\n",
-    "        :param self: объект справа от оператора.\n",
+    "        :param other: объект справа от оператора.\n",
     "        :return: True, если self > other; False - в обратном случае.\n",
     "        \"\"\"\n",
     "        if self.groomName > other.groomName:\n",
@@ -44,7 +44,7 @@
     "        \"\"\"\n",
     "        Перегрузка оператора \"<\" для сравнения объектов.\n",
     "        Сравнение идёт сначала по имени жениха, затем по дате свадьбы, затем по номеру ЗАГСа.\n",
-    "        :param self: объект справа от оператора.\n",
+    "        :param other: объект справа от оператора.\n",
     "        :return: True, если self < other; False - в обратном случае.\n",
     "        \"\"\"\n",
     "        if self.groomName < other.groomName:\n",
@@ -309,7 +309,7 @@
     "    # Находим среднее время поиска по ключу по 50000 попыткам\n",
     "    for _ in range(50000):\n",
     "        check = time()\n",
-    "        list(map(lambda obj: obj.toStr(), multimap[randomGroom]))\n",
+    "        map(lambda obj: obj.toStr(), multimap[randomGroom])\n",
     "        keyTime += time() - check\n",
     "    \n",
     "    keyTime *= 20\n",
