--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -151,7 +151,7 @@
     "    if leftBound > rightBound: \n",
     "        return None\n",
     "    elif leftBound == rightBound:\n",
-    "        return [array[middleBound].toStr()]\n",
+    "        return [array[middleBound].toStr()] if array[middleBound].groomName == query else []\n",
     "    else:\n",
     "        results = []\n",
     "        flagLeft, flagRight = True, True\n",
