--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -149,7 +149,7 @@
     "            rightBound = middleBound - 1\n",
     "        middleBound = (leftBound+rightBound) // 2\n",
     "    if leftBound > rightBound: \n",
-    "        return None\n",
+    "        return []\n",
     "    elif leftBound == rightBound:\n",
     "        return [array[middleBound].toStr()] if array[middleBound].groomName == query else []\n",
     "    else:\n",
